--- a/TestingProject/TestingProject.csproj
+++ b/TestingProject/TestingProject.csproj
@@ -6,7 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="input_files\" />
+    <None Update="input_files\test_baza.in">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
