--- a/ProblemSolver/ProblemSolver.csproj
+++ b/ProblemSolver/ProblemSolver.csproj
@@ -46,7 +46,7 @@
   <ItemGroup>
     <Compile Include="CONSTANTS.cs" />
     <Compile Include="exceptions\IntervalInvalidException.cs" />
-    <Compile Include="exceptions\InvalidDataException.cs" />
+    <Compile Include="exceptions\InvalidInputDataException.cs" />
     <Compile Include="exceptions\MustBeBiggerThanException.cs" />
     <Compile Include="exceptions\MustBeLowerThanException.cs" />
     <Compile Include="Interval.cs" />
@@ -57,18 +57,20 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="input_files\test_baza.in" />
+    <Content Include="input_files\test_baza.txt" />
     <None Include="output_files\exception2.out" />
     <None Include="output_files\exception1.out" />
     <None Include="output_files\no_solution.out" />
     <None Include="output_files\result1.out" />
     <None Include="output_files\result2.out" />
     <None Include="output_files\result3.out" />
+    <None Include="output_files\test_baza.out" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
     <Content Include="input_files\exception2.txt" />
     <Content Include="input_files\exception1.txt" />
+    <Content Include="input_files\exception3.txt" />
     <Content Include="input_files\no_solution.txt" />
     <Content Include="input_files\result1.txt" />
     <Content Include="input_files\result2.txt" />
